--- a/src/elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html
+++ b/src/elements/guuey-time-chunk-selector/guuey-time-chunk-selector.html
@@ -16,12 +16,19 @@
         text-align: center;
         --paper-item-selected:{
           border:2px solid green;
-          color:green;
+          color:#FFFFFF;
+          background-color:green;
         }
         --paper-item:{
           border:1px solid grey;
           color:grey;
         }
+      }
+      paper-item:hover{
+        cursor:pointer;
+          border:2px solid green;
+          color:grey;
+
       }
       .paperItemText{
         padding:10px;
