--- a/src/pages/care-plan/su-care/dependencies.html
+++ b/src/pages/care-plan/su-care/dependencies.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../../../../bower_components/app-storage/app-indexeddb-mirror/app-indexeddb-mirror.html" />
 <link rel="import" href="../../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html" />
 <link rel="import" href="../../../../bower_components/paper-listbox/paper-listbox.html" />
+<link rel="import" href="../../../../bower_components/vaadin-combo-box/vaadin-combo-box.html" />
 <link rel="import" href="../../../elements/su-header/su-header.html" />
 <link rel="import" href="../../../elements/guuey-custom-text-input/guuey-custom-text-input.html" />
 <link rel="import" href="../../../elements/guuey-list-input/guuey-list-input.html" />
@@ -18,3 +19,8 @@
 <link rel="import" href="../../../elements/guuey-text-input/guuey-text-input.html" />
 <link rel="import" href="../../../elements/guuey-table/guuey-table.html" />
 <link rel="import" href="../../../elements/guuey-table-row/guuey-table-row.html" />
+
+
+<link rel="import" href="../../../../bower_components/paper-listbox/paper-listbox.html" />
+<link rel="import" href="../../../../bower_components/paper-item/paper-item.html" />
+<link rel="import" href="../../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html" />
