--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -122,12 +122,11 @@
             </paper-input>
 
             <guuey-date-input
-              route="/homes/[[home]]/patients/[[patient]]/personalProfile/dob"
+              value="{{profileData.dob}}"
               label="Date of Birth"
               tabindex="3"
               required
               auto-validate
-              guuey-date={{guueyDOB}}
               error-message="Please enter a date by clicking on tapping/clicking on this field.">
             </guuey-date-input>
 
@@ -141,12 +140,11 @@
             </paper-input>
 
             <guuey-date-input
-              route="/homes/[[home]]/patients/[[patient]]/personalProfile/dateAssessed"
+              value="{{profileData.dateAssessed}}"
               label="Date Assessed"
               tabindex="5"
               required
               auto-validate
-              guuey-date="{{guueyDOA}}"
               error-message="Please enter a date by clicking on tapping/clicking on this field.">
             </guuey-date-input>
 
@@ -957,10 +955,10 @@
           } else if(!data.lName){
             this.fire("openToast", {toastText: "Last name is required before saving the new service user."});
             return;
-          } else if(!this.guueyDOB){
+          } else if(!data.dob){
             this.fire("openToast", {toastText: "Date of birth is required before saving the new service user."});
             return;
-          } else if(!this.guueyDOA){
+          } else if(!data.dateAssessed){
             this.fire("openToast", {toastText: "Date of assessment is required before saving the new service user."});
             return;
           } else if(!data.partnership){
